--- a/package.json
+++ b/package.json
@@ -1,22 +1,27 @@
 {
-  "name": "worktree-client",
-  "version": "1.0.0",
-  "description": "client-side for worktree",
-  "main": "index.html",
-  "dependencies": {
-    "grunt": "^0.4.5",
-    "grunt-bower": "^0.20.0",
-    "grunt-contrib-cssmin": "^0.14.0",
-    "grunt-contrib-jshint": "^0.11.3",
-    "grunt-contrib-uglify": "^0.9.2",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-sass": "^1.1.0",
-    "jit-grunt": "^0.9.1",
-    "time-grunt": "^1.2.2"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Ju Park",
-  "license": "ISC"
+    "name": "worktree-client",
+    "version": "1.0.0",
+    "description": "client-side for worktree",
+    "main": "index.html",
+    "dependencies": {
+
+    },
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "Ju Park",
+    "license": "ISC",
+    "devDependencies": {
+        "grunt-concurrent": "^2.1.0",
+        "grunt": "^0.4.5",
+        "grunt-bower": "^0.20.0",
+        "grunt-contrib-cssmin": "^0.14.0",
+        "grunt-contrib-jshint": "^0.11.3",
+        "grunt-contrib-uglify": "^0.9.2",
+        "grunt-contrib-watch": "^0.6.1",
+        "grunt-nodemon": "^0.4.0",
+        "grunt-sass": "^1.1.0",
+        "jit-grunt": "^0.9.1",
+        "time-grunt": "^1.2.2"
+    }
 }
